change vk icon style

--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,9 @@ li a {
 }
 /*Ipad*/
 @media screen and (max-width:768px) {
+  .vk {
+    display:none;
+  }
   .mag {
     display:none;
   }
@@ -136,6 +139,9 @@ li a {
 }
 /*mobile*/
 @media screen and (max-width:500px) {
+  .vk {
+    display:none;
+  }
   .mag {
     display:none;
   }
