--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,9 @@
   color: black;
 }
 .verse {
-  width: 300px;
-  margin-left: 50px;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 ul {
   list-style-type: none;
